@@ -193,32 +193,9 @@ Listen @@Port@@
 # Statically compiled modules (those listed by `httpd -l') do not need
 # to be loaded here.
 #
-#LoadModule auth_anon_module modules/mod_auth_anon.so
-#LoadModule auth_db_module modules/mod_auth_db.so
-#LoadModule auth_dbm_module modules/mod_auth_dbm.so
-#LoadModule auth_digest_module modules/mod_auth_digest.so
-#LoadModule cern_meta_module modules/mod_cern_meta.so
-#LoadModule dav_module modules/mod_dav.so
-#LoadModule dav_fs_module modules/mod_dav_fs.so
-#LoadModule expires_module modules/mod_expires.so
-#LoadModule file_cache_module modules/mod_file_cache.so
-#LoadModule headers_module modules/mod_headers.so
-#LoadModule info_module modules/mod_info.so
-#LoadModule ldap_module modules/mod_ldap.so
-#LoadModule auth_ldap_module modules/mod_auth_ldap.so
-#LoadModule mime_magic_module modules/mod_mime_magic.so
-#LoadModule proxy_module modules/mod_proxy.so
-#LoadModule proxy_connect_module modules/proxy_connect.so
-#LoadModule proxy_http_module modules/proxy_http.so
-#LoadModule proxy_ftp_module modules/proxy_ftp.so
-#LoadModule rewrite_module modules/mod_rewrite.so
-#LoadModule ssl_module modules/mod_ssl.so
-#LoadModule speling_module modules/mod_speling.so
-#LoadModule suexec_module modules/mod_suexec.so
-#LoadModule status_module modules/mod_status.so
-#LoadModule unique_id_module modules/mod_unique_id.so
-#LoadModule usertrack_module modules/mod_usertrack.so
-#LoadModule vhost_alias_module modules/mod_vhost_alias.so
+# Example:
+# LoadModule foo_module modules/mod_foo.so
+@@LoadModule@@
 
 #
 # ExtendedStatus controls whether Apache will generate "full" status
